@@ -2,6 +2,8 @@ Beaker Changelog
 ================
 
 0.9.2 (**tip**)
+* Removed CTRCipher as pycryptopp doesn't need it.
+* Changed AES to use 256 bit.
 * Fixed signing code to use hmac with sha for better signing security.
 * Fixed memcached code to use delete_multi on clearing the keys for efficiency
   and updated key retrieval to properly store and retrieve None values.
